--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead class="table">
+			<tr class="trow">
+				<th>Roll Number</th>
+				<th>Name</th>
+			</tr>
+		</thead>
+		<tbody id="tbody">
+			
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
